- Applied ElasticSearch for getCourses of course v2 endpoint - Applied fuzzy matching to handle typos - Fallback to prisma if ElasticSearch failed
